scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsDeclarationsReusesExistingNodesMappingJSDocTypes.errors.txt
index.js(1,13): error TS1110: Type expected.
index.js(16,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
index.js(16,20): error TS1005: '}' expected.
index.js(19,12): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
index.js(19,20): error TS1005: '}' expected.
index.js(22,12): error TS2315: Type 'Object' is not generic.


==== index.js (6 errors) ====
    /** @type {?} */
                ~
!!! error TS1110: Type expected.
    export const a = null;
    
    /** @type {*} */
    export const b = null;
    
    /** @type {string?} */
    export const c = null;
    
    /** @type {string=} */
    export const d = null;
    
    /** @type {string!} */
    export const e = null;
    
    /** @type {function(string, number): object} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                       ~
!!! error TS1005: '}' expected.
    export const f = null;
    
    /** @type {function(new: object, string, number)} */
               ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                       ~
!!! error TS1005: '}' expected.
    export const g = null;
    
    /** @type {Object.<string, number>} */
               ~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
    export const h = null;
    